Sync window on the way

--- a/src/NonLocality/SyncWindow.xaml
+++ b/src/NonLocality/SyncWindow.xaml
@@ -7,6 +7,6 @@
     <StackPanel>
         <Label x:Name="label"/>
         <Button x:Name="button"/>
-        <ListBox x:Name="list"/>
+        <ListView x:Name="list"/>
     </StackPanel>
 </Controls:MetroWindow>
