--- a/src/NonLocality/ProfileWindow.xaml
+++ b/src/NonLocality/ProfileWindow.xaml
@@ -43,7 +43,7 @@
             </Grid>
         </TabItem>
         <TabItem Header="Sync Point">
-            <local:SyncPointSettingsControl/>
+            <local:SyncPointSettingsControl x:Name="ucSyncPoint"/>
         </TabItem>
     </TabControl>
 </Controls:MetroWindow>
